Search bar added
Added search bar when we hover the search icon the search bar will display.

--- a/Index.html
+++ b/Index.html
@@ -20,9 +20,11 @@
                     <a href="#">Home</a>
                 </div>
                 <div class="nav-option">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <a href="#">Search</a>
+                    <input type="text" id="search-input" placeholder="Type to search...">
+                    <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
+                    
                 </div>
+                
             </div>
             <div class="library">
                 <div class="option">
